Potential fix for code scanning alert no. 77: Uncontrolled command line (#723)
* Potential fix for code scanning alert no. 77: Uncontrolled command line

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>

* Potential fix for code scanning alert no. 108: User-controlled data in numeric cast (#722)

* Potential fix for code scanning alert no. 108: User-controlled data in numeric cast

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>

* Have a more reasonable MAX_TIMEOUT, Copilot-suggested maximum int value is tooooooooooooo long ;)

* Change Tomcat rempte deployer default timeout from two hours to ten minutes

---------

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>

* Potential fix for code scanning alert no. 77: Uncontrolled command line

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>

---------

Co-authored-by: Copilot Autofix powered by AI <62310815+github-advanced-security[bot]@users.noreply.github.com>